--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,11 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
+    "paths": {
+      "ng-picker": [
+        "./dist/ng-picker"
+      ]
+    },
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
     "isolatedModules": true,
@@ -22,5 +27,13 @@
     "typeCheckHostBindings": true,
     "strictTemplates": true
   },
-  "files": []
+  "files": [],
+  "references": [
+    {
+      "path": "./projects/ng-picker/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/ng-picker/tsconfig.spec.json"
+    }
+  ]
 }
